ruka-lang.org/src/lib/interpreter/fixtures/type-err/let-tuple-on-record.ruka
// expect: tuple destructure expects a tuple value
let Point = record { x: int, y: int }

let main = () do
	let p: Point = { x = 1, y = 2 }
	let (a, b) = p
end
